[tool.poetry]
name = "deepeval"
version = "2.9.1"
description = "The LLM Evaluation Framework"
authors = ["Jeffrey Ip <jeffreyip@confident-ai.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/confident-ai/deepeval"
documentation = "https://deepeval.com"
exclude = ["tests/*", "tracing_tests/*"]

[tool.poetry.scripts]
deepeval = 'deepeval.cli.main:app'

[tool.poetry.plugins."pytest11"]
plugins = "deepeval.plugins.plugin"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
requests = "^2.31.0"
tqdm = "^4.66.1"
pytest = "*"
pytest-xdist = "*"
pytest-repeat = "*"
pytest-rerunfailures = "^12.0"
pytest-asyncio = "*"
tabulate = "^0.9.0"
sentry-sdk = "*"
rich = "^13.6.0"
portalocker = "*"
openai = "*"
aiohttp = "*"
typer = "*"
ollama="*"
setuptools = "*"
wheel = "*"
nest_asyncio = "*"
tenacity = "<=9.0.0"
opentelemetry-api = "^1.24.0"  
opentelemetry-sdk = "^1.24.0" 
opentelemetry-exporter-otlp-proto-grpc = "^1.24.0" 
grpcio = "^1.67.1"
anthropic = "^0.49.0"
google-genai = "^1.9.0"
posthog = "^3.23.0"

[tool.poetry.group.dev.dependencies]
twine = "5.1.1"
black = "*"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-m 'not skip_test'"
markers = [
    "skip_test: skip the test",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"