[tool.poetry]
name = "deepeval"
version = "3.7.2"
description = "The LLM Evaluation Framework"
authors = ["Jeffrey Ip <jeffreyip@confident-ai.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/confident-ai/deepeval"
documentation = "https://deepeval.com"
exclude = ["tests/*", "tracing_tests/*"]

[tool.poetry.scripts]
deepeval = 'deepeval.cli.main:app'

[tool.poetry.plugins."pytest11"]
deepeval = "deepeval.plugins.plugin"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
requests = "^2.31.0"
tqdm = "^4.66.1"
pytest = "*"
pytest-xdist = "*"
pytest-repeat = "*"
pytest-rerunfailures = "*"
pytest-asyncio = "*"
tabulate = "^0.9.0"
sentry-sdk = "*"
rich = ">=13.6.0, <15.0.0"
portalocker = "*"
openai = "*"
aiohttp = "*"
typer = ">=0.9,<1.0.0"
click = ">=8.0.0,<8.3.0"
ollama = "*"
setuptools = "*"
wheel = "*"
nest_asyncio = "*"
tenacity = ">=8.0.0,<=10.0.0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.24.0"
grpcio = "^1.67.1"
anthropic = "*"
google-genai = "^1.9.0"
posthog = "^5.4.0, <7.0.0"
pyfiglet = "*"
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
jinja2 = "*"

[tool.poetry.group.dev.dependencies]
twine = "5.1.1"
black = { extras = ["jupyter"], version = "^25.1.0" }
chromadb = "*"
langchain = "*"
langchain_core = "*"
langchain_community = "*"
langchain_text_splitters = "*"
tiktoken = "*"
pypdf = "*"
docx2txt = "*"
pandas = "*"
pysqlite3-binary = "^0.5.4"
pre-commit = "^4.3.0"
ruff = "^0.13.0"

[tool.black]
line-length = 80

[tool.ruff]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-m 'not skip_test'"
markers = [
    "skip_test: skip the test",
    "enable_dotenv: allow this test to load .env files via autoload_dotenv()",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.group.integrations]
optional = true

[tool.poetry.group.integrations.dependencies]
crewai = { version = "*", python = ">=3.10,<3.11" }
pydantic-ai = { version = "^1.0.18", python = ">=3.10,<3.11" }
langgraph = "^0.6.10"
llama-index = "^0.14.4"
langchain_openai = "^0.3.35"
openai-agents = "^0.3.3"
langchain = "^0.3.27"
